# app/views/user.py
@@ -1,15 +1,14 @@
 from marshmallow import Schema, fields, ValidationError
-#from marshmallow_enum import EnumField
-from enum import Enum
 from flask import Blueprint, jsonify, request
 import app.models as models
 import app.db as db
 from flask_bcrypt import Bcrypt
+from app.auth import auth
 
 user_blueprint = Blueprint('user', __name__, url_prefix='/user')
 bcrypt = Bcrypt()
 	
-@user_blueprint.route('/', methods=['POST'])
+@user_blueprint.route('', methods=['POST'])
 def create_user():
 	class User(Schema):
 		surname = fields.Str(required=True)
@@ -22,9 +21,9 @@ def create_user():
 			raise ValidationError('No input data provided')
 		User().load(request.json)
 	except ValidationError as err:
-		return jsonify(err.messages), 400
-		
-	
+		return jsonify(err.messages), 400	
+
+
 	new_user_model = models.Users(surname = request.json['surname'], name = request.json['name'], username = request.json['username'], password = bcrypt.generate_password_hash(request.json['password']).decode('utf-8'))   
 	user_already_exists = db.session.query(models.Users).filter(models.Users.username == new_user_model.username).count() != 0
 	
@@ -35,12 +34,11 @@ def create_user():
 		db.session.add(new_user_model)
 	except:
 		db.session.rollback()
-		return jsonify({"User data is not valid"}), 400
+		return jsonify({"Failed to add user, database error"}), 405
 		
-	new_user = db.session.query(models.Users).filter_by(username=request.json['username']).first()
-	new_PersonalBudget_model = models.PersonalBudgets(id=new_user_model.id, money_amount=0)
+	new_personal_budget_model = models.PersonalBudgets(id=new_user_model.id, money_amount=0)
 	try:
-		db.session.add(new_PersonalBudget_model)
+		db.session.add(new_personal_budget_model)
 	except:
 		db.session.rollback()
 		return jsonify({"Failed to create personal budget, database error"}), 405
@@ -57,10 +55,15 @@ def create_user():
 	res_json['family_budgets'] = [int(row.family_budget_id) for row in db.session.query(models.FamilyBudgetsUsers).filter_by(user_id=new_user_model.id).all()]
 
 	return jsonify(res_json), 200
-	
+
 @user_blueprint.route('/<int:user_id>', methods=['GET'])
+@auth.login_required
 def get_user(user_id):
 	user = db.session.query(models.Users).filter_by(id=user_id).first()
+	
+	if user != auth.current_user():
+		return jsonify({'error': 'Unauthorized access'}), 401
+
 	if user is None:
 		return jsonify({'error': 'User not found'}), 404
 	
@@ -76,22 +79,26 @@ def get_user(user_id):
 	return jsonify(res_json), 200
 	
 @user_blueprint.route('/<int:user_id>', methods=['PATCH'])
+@auth.login_required
 def update_user(user_id):	
 	try:
 		class User(Schema):
-			surname = fields.Str(required=True)
-			name = fields.Str(required=True)
-			username = fields.Str(required=True)
-			password = fields.Str(required=True)
+			surname = fields.Str(required=False)
+			name = fields.Str(required=False)
+			username = fields.Str(required=False)
+			password = fields.Str(required=False)
 			
 		if not request.json:
 			raise ValidationError('No input data provided')
 		User().load(request.json)
 	except ValidationError as err:
 		return jsonify(err.messages), 400
-	
-	
+		
 	user = db.session.query(models.Users).filter(models.Users.id == user_id).first()
+		
+	if user != auth.current_user():
+		return jsonify({'error': 'Unauthorized access'}), 401
+	
 	if user is None:
 		return jsonify({'error': 'User does not exist'}), 404
 	
@@ -113,8 +120,13 @@ def update_user(user_id):
 	return "", 200
 	
 @user_blueprint.route('/<int:user_id>', methods=['DELETE'])
+@auth.login_required
 def delete_user(user_id):
 	user = db.session.query(models.Users).filter(models.Users.id == user_id).first()
+	
+	if user != auth.current_user():
+		return jsonify({'error': 'Unauthorized access'}), 401
+
 	if user is None:
 		return jsonify({'error': 'User does not exist'}), 404
 	
@@ -127,3 +139,4 @@ def delete_user(user_id):
 	db.session.commit()
 
 	return jsonify({'message': "User deleted successfully"}), 200
+
